--- a/public/index.html
+++ b/public/index.html
@@ -8,23 +8,11 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>New Age - Start Bootstrap Theme</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+  <title>Helping Families</title>
   <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-
-  <!-- Plugin CSS -->
-  <link rel="stylesheet" href="device-mockups/device-mockups.min.css">
-
-  <!-- Custom styles for this template -->
-  <link href="css/new-age.min.css" rel="stylesheet">
 
 </head>
 
@@ -33,49 +21,17 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#download">Download</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#features">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Helping Families in Silicon Valley</a>
     </div>
   </nav>
 
   <header class="masthead">
     <div class="container h-100">
       <div class="row h-100">
-        <div class="col-lg-7 my-auto">
+        <div class="col-lg-8 my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
+            <h1 class="mb-5">Helping Families in Silicon Valley</h1>
             <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
-          </div>
-        </div>
-        <div class="col-lg-5 my-auto">
-          <div class="device-container">
-            <div class="device-mockup iphone6_plus portrait white">
-              <div class="device">
-                <div class="screen">
-                  <!-- Demo image for screen mockup, you can put an image here, some HTML, an animation, video, or anything else! -->
-                  <img src="img/demo-screen-1.jpg" class="img-fluid" alt="">
-                </div>
-                <div class="button">
-                  <!-- You can hook the "home button" to some JavaScript events or just remove it -->
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -87,7 +43,7 @@
       <div class="row">
         <div class="col-md-8 mx-auto">
           <h2 class="section-heading">Discover what all the buzz is about!</h2>
-          <p>Our app is available on any mobile device! Download now to get started!</p>
+          <p>Contact Us to get started!</p>
           <div class="badges">
             <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
             <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
@@ -97,58 +53,108 @@
     </div>
   </section>
 
-  <section class="features" id="features">
+  <!-- Team -->
+<section id="team" class="pb-5 bg-light page-section" id="team">
     <div class="container">
-      <div class="section-heading text-center">
-        <h2>Unlimited Features, Unlimited Fun</h2>
-        <p class="text-muted">Check out what you can do with this app theme!</p>
-        <hr>
-      </div>
-      <div class="row">
-        <div class="col">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="feature-item">
-                  <i class="icon-screen-smartphone text-primary"></i>
-                  <h3>Device Mockups</h3>
-                  <p class="text-muted">Ready to use HTML/CSS device mockups, no Photoshop required!</p>
+        <h5 class="section-title h1">OUR TEAM</h5>
+        <div class="row">
+            <!-- Team member -->
+            <div class="col-xs-12 col-sm-6 col-md-6 mb-5">
+                <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                    <div class="mainflip">
+                        <div class="frontside">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <p><img class="img-fluid" src="http://via.placeholder.com/300" alt="card image"></p>
+                                    <h4 class="card-title">Julie Larios</h4>
+                                    <p class="card-text">CEO and Co-founder</p>
+                                    <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="backside">
+                            <div class="card">
+                                <div class="card-body text-center mt-4">
+                                    <h4 class="card-title">Julie Larios</h4>
+                                    <p class="card-text">
+                                      During her time at SJSU she volunteer in the Redwood City Police Department, emphasizing in Community Outreach. Afterwards, she interned at the department specializing in youth development with the Juvenile Unit. While serving the community in the Social Justice field, she grew passionate with strengthening communities and started working in the Non-profit sector. There she established her vision as a non-profit leader, to uplift and strengthen families in her community.
+                                    </p>
+                                    <ul class="list-inline social-buttons">
+                                      <li class="list-inline-item">
+                                        <a href="#">
+                                          <i class="fab fa-twitter text-white"></i>
+                                        </a>
+                                      </li>
+                                      <li class="list-inline-item">
+                                        <a href="#">
+                                          <i class="fab fa-facebook-f text-white"></i>
+                                        </a>
+                                      </li>
+                                      <li class="list-inline-item">
+                                        <a href="#">
+                                          <i class="fab fa-linkedin-in text-white"></i>
+                                        </a>
+                                      </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="feature-item">
-                  <i class="icon-camera text-primary"></i>
-                  <h3>Flexible Use</h3>
-                  <p class="text-muted">Put an image, video, animation, or anything else in the screen!</p>
-                </div>
-              </div>
             </div>
-            <div class="row">
-              <div class="col-lg-6">
-                <div class="feature-item">
-                  <i class="icon-present text-primary"></i>
-                  <h3>Free to Use</h3>
-                  <p class="text-muted">As always, this theme is free to download and use for any purpose!</p>
+            <!-- ./Team member -->
+            <div class="col-xs-12 col-sm-6 col-md-6 mb-5">
+                <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+                    <div class="mainflip">
+                        <div class="frontside">
+                            <div class="card">
+                                <div class="card-body text-center">
+                                    <p><img class="img-fluid" src="http://via.placeholder.com/300" alt="card image"></p>
+                                    <h4 class="card-title">Melissa Montoya</h4>
+                                    <p class="card-text">Chief Executive office and Co-founder</p>
+                                    <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="backside">
+                            <div class="card">
+                                <div class="card-body text-center mt-4">
+                                    <h4 class="card-title">Melissa Montoya</h4>
+                                    <p class="card-text">
+                                      Melissa is a Bay Area native, born and raised in Redwood City. Starting Helping Families in Silicon Valley alongside Julie has always been a dream of hers. As the Chief Executive officer she plans to reach as many families through workshops and by providing resources. She received her undergraduate degree from San Jose State with a Liberal Arts Major focusing on Child Development. She’s worked as a teacher for over eight years. Her passion is to give back to the community and return the gift of giving. 
+                                    </p>
+                                    <ul class="list-inline social-buttons">
+                                      <li class="list-inline-item">
+                                        <a href="#">
+                                          <i class="fab fa-twitter text-white"></i>
+                                        </a>
+                                      </li>
+                                      <li class="list-inline-item">
+                                        <a href="#">
+                                          <i class="fab fa-facebook-f text-white"></i>
+                                        </a>
+                                      </li>
+                                      <li class="list-inline-item">
+                                        <a href="#">
+                                          <i class="fab fa-linkedin-in text-white"></i>
+                                        </a>
+                                      </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="feature-item">
-                  <i class="icon-lock-open text-primary"></i>
-                  <h3>Open Source</h3>
-                  <p class="text-muted">Since this theme is MIT licensed, you can use it commercially!</p>
-                </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-  </section>
+</section>
 
+<!-- -->
   <section class="cta">
     <div class="cta-content">
       <div class="container">
-        <h2>Stop waiting.<br>Start building.</h2>
+        <h2>Stop waiting.<br>Start Getting Involved.</h2>
         <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
       </div>
     </div>
@@ -182,7 +188,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; Helping Families 2019. All Rights Reserved.</p>
+      <p>&copy; Helping Families in Silicon Valley 2019. All Rights Reserved.</p>
       <ul class="list-inline">
         <li class="list-inline-item">
           <a href="#">Privacy</a>
@@ -197,16 +203,6 @@
     </div>
   </footer>
 
-  <!-- Bootstrap core JavaScript 
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Plugin JavaScript
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Custom scripts for this template
-  <script src="js/new-age.min.js"></script>
-   -->
 </body>
 
 </html>
