deploy gh-pages

--- a/public/index.html
+++ b/public/index.html
@@ -21,24 +21,26 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Helping Families in Silicon Valley</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <img src="logo.svg" alt="" height="40">
+      Helping Families in Silicon Valley</a>
     </div>
   </nav>
 
   <header class="masthead">
     <div class="container h-100">
       <div class="row h-100">
-        <div class="col-lg-8 my-auto">
+        <div class="col my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">Helping Families in Silicon Valley</h1>
-            <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
+            <h1 class="mb-5">        <img src="logo.svg" alt="" height="40" class="mr-2">Helping Families in Silicon Valley</h1>
+            <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Helping Today</a>
           </div>
         </div>
       </div>
     </div>
   </header>
 
-  <section class="download bg-primary text-center" id="download">
+  <section class="download bg-navy-blue text-white text-center" id="download">
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto">
@@ -65,10 +67,10 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <p><img class="img-fluid" src="http://via.placeholder.com/300" alt="card image"></p>
+                                    <p><img class="img-fluid" src="./julie-larios.jpeg" alt="card image"></p>
                                     <h4 class="card-title">Julie Larios</h4>
                                     <p class="card-text">CEO and Co-founder</p>
-                                    <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                        
                                 </div>
                             </div>
                         </div>
@@ -76,9 +78,9 @@
                             <div class="card">
                                 <div class="card-body text-center mt-4">
                                     <h4 class="card-title">Julie Larios</h4>
-                                    <p class="card-text">
+                                    <h6 class="card-text text-small">
                                       During her time at SJSU she volunteer in the Redwood City Police Department, emphasizing in Community Outreach. Afterwards, she interned at the department specializing in youth development with the Juvenile Unit. While serving the community in the Social Justice field, she grew passionate with strengthening communities and started working in the Non-profit sector. There she established her vision as a non-profit leader, to uplift and strengthen families in her community.
-                                    </p>
+                                    </h6>
                                     <ul class="list-inline social-buttons">
                                       <li class="list-inline-item">
                                         <a href="#">
@@ -109,10 +111,10 @@
                         <div class="frontside">
                             <div class="card">
                                 <div class="card-body text-center">
-                                    <p><img class="img-fluid" src="http://via.placeholder.com/300" alt="card image"></p>
+                                    <p><img class="img-fluid" src="./melissa-montoya.jpeg" alt="card image"></p>
                                     <h4 class="card-title">Melissa Montoya</h4>
                                     <p class="card-text">Chief Executive office and Co-founder</p>
-                                    <a href="#" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i></a>
+                        
                                 </div>
                             </div>
                         </div>
@@ -120,9 +122,9 @@
                             <div class="card">
                                 <div class="card-body text-center mt-4">
                                     <h4 class="card-title">Melissa Montoya</h4>
-                                    <p class="card-text">
+                                    <h6 class="card-text">
                                       Melissa is a Bay Area native, born and raised in Redwood City. Starting Helping Families in Silicon Valley alongside Julie has always been a dream of hers. As the Chief Executive officer she plans to reach as many families through workshops and by providing resources. She received her undergraduate degree from San Jose State with a Liberal Arts Major focusing on Child Development. She’s worked as a teacher for over eight years. Her passion is to give back to the community and return the gift of giving. 
-                                    </p>
+                                    </h6>
                                     <ul class="list-inline social-buttons">
                                       <li class="list-inline-item">
                                         <a href="#">
@@ -161,7 +163,7 @@
     <div class="overlay"></div>
   </section>
 
-  <section class="contact bg-primary" id="contact">
+  <section class="contact bg-navy-blue text-white" id="contact">
     <div class="container">
       <h2>We
         <i class="fas fa-heart"></i>
