--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,17 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <img src="logo.svg" alt="" height="40">
-      Helping Families in Silicon Valley</a>
+        <span class="d-none d-sm-inline mr-2"><img src="logo.svg" alt="" height="40" /></span>
+        Helping Families in Silicon Valley
+      </a>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
     </div>
   </nav>
 
@@ -34,7 +43,7 @@
       <div class="row h-100">
         <div class="col my-auto">
           <div class="header-content mx-auto">
-            <h1 class="mb-5">        <img src="logo.svg" alt="" height="40" class="mr-2">Helping Families in Silicon Valley</h1>
+            <h1 class="mb-5"><img src="logo.svg" alt="" height="40" class="mr-2">Helping Families in Silicon Valley</h1>
             <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Helping Today</a>
           </div>
         </div>
