change bio, styles

--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,9 @@
     <div class="row h-100">
       <div class="col my-auto">
         <div class="header-content mx-auto">
-          <h1 class="mb-5"><img src="logo.svg" alt="" height="40" class="mr-2">Helping Families in Silicon Valley</h1>
-          <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Helping Today</a>
+          <h1 class="mb-3"><img src="logo.svg" alt="" height="40" class="mr-2">Helping Families in Silicon Valley</h1>
+          <h2 class="mb-3">Our mission is to provide families with resources to uplift <br/> and strengthen their lives.</h2>
+          <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Start Helping Today</a>
         </div>
       </div>
     </div>
@@ -55,7 +56,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 mx-auto">
-        <h2 class="section-heading">Discover what all the buzz is about!</h2>
+        <h2 class="section-heading">Our vision is to uplift and strengthen families to empower communities.</h2>
         <p>Contact Us to get started!</p>
       </div>
     </div>
@@ -86,12 +87,12 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title">Julie Larios</h4>
                   <h6 class="card-text text-small">
-                    During her time at SJSU she volunteer in the Redwood City Police Department, emphasizing in Community Outreach. Afterwards, she interned at the department specializing in youth development with the Juvenile Unit. While serving the community in the Social Justice field, she grew passionate with strengthening communities and started working in the Non-profit sector. There she established her vision as a non-profit leader, to uplift and strengthen families in her community.
+                    Julie founded Helping Families in Silicon Valley in 2019. What inspired her to start the Helping Families organization was her passion for helping the community strive. In fact, prior to her profession Julie studied at San Jose State University  where she earned her undergraduate degree in Justice Studies. Moreover, during her free time she would often volunteer in the Redwood City police department. Her main focus as a volunteer was in the community outreach and juvenile units sector. Julie’s vision as a non-profit leader is to uplift and strengthen families in the community. 
                   </h6>
                   <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
-                      <a href="#">
-                        <i class="fab fa-twitter text-white"></i>
+                      <a href="mailto:julie.larios@helpingfamiliesinsiliconvalley.org">
+                        <i class="fas fa-envelope text-white"></i>
                       </a>
                     </li>
                     <li class="list-inline-item">
@@ -120,7 +121,7 @@
                 <div class="card-body text-center">
                   <p><img class="img-fluid" src="./melissa-montoya.jpeg" alt="card image"></p>
                   <h4 class="card-title">Melissa Montoya</h4>
-                  <p class="card-text">Chief Executive office and Co-founder</p>
+                  <p class="card-text">Chief Financial Officer and Co-founder</p>
                   
                 </div>
               </div>
@@ -130,12 +131,12 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title">Melissa Montoya</h4>
                   <h6 class="card-text">
-                    Melissa is a Bay Area native, born and raised in Redwood City. Starting Helping Families in Silicon Valley alongside Julie has always been a dream of hers. As the Chief Executive officer she plans to reach as many families through workshops and by providing resources. She received her undergraduate degree from San Jose State with a Liberal Arts Major focusing on Child Development. She’s worked as a teacher for over eight years. Her passion is to give back to the community and return the gift of giving. 
+                    Melissa is a Bay Area native, born and raised in Redwood City. Starting Helping Families in Silicon Valley has always been a dream of hers. As the Co- Founder and Chief Financial Officer she plans to reach as many families through workshops and by providing resources. She received her undergraduate degree from SJSU with a Liberal Arts Major focusing on Child Development. She’s worked as a teacher for over eight years. Her passion is to give back to the community and return the gift of giving. 
                   </h6>
                   <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
-                      <a href="#">
-                        <i class="fab fa-twitter text-white"></i>
+                      <a href="mailto:melissavazquez@helpingfamiliesinsiliconvalley.org">
+                        <i class="fas fa-envelope text-white"></i>
                       </a>
                     </li>
                     <li class="list-inline-item">
@@ -161,7 +162,7 @@
 <!-- Team -->
 <section id="team" class="pb-5 bg-light page-section" id="team">
   <div class="container">
-    <h5 class="section-title h1">OUR TEAM</h5>
+    <h5 class="section-title h1">Board of Directors</h5>
     <div class="row">
       <!-- Team member -->
       <div class="col-xs-12 col-sm-6 col-md-4 mb-5">
@@ -172,7 +173,7 @@
                 <div class="card-body text-center">
                   <p><img class="img-fluid" src="./lorena-torres.png" alt="card image"></p>
                   <h4 class="card-title">Lorena Torres</h4>
-                  <p class="card-text">Treasurer</p>
+                  <p class="card-text">Registered Nurse</p>
                   
                 </div>
               </div>
@@ -186,7 +187,7 @@
                   <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
                       <a href="#">
-                        <i class="fab fa-twitter text-white"></i>
+                        <i class="fas fa-envelope text-white"></i>
                       </a>
                     </li>
                     <li class="list-inline-item">
@@ -228,7 +229,7 @@
                   <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
                       <a href="#">
-                        <i class="fab fa-twitter text-white"></i>
+                        <i class="fas fa-envelope text-white"></i>
                       </a>
                     </li>
                     <li class="list-inline-item">
@@ -270,7 +271,7 @@
                   <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
                       <a href="#">
-                        <i class="fab fa-twitter text-white"></i>
+                        <i class="fas fa-envelope text-white"></i>
                       </a>
                     </li>
                     <li class="list-inline-item">
@@ -307,23 +308,20 @@
 
 <section class="contact bg-navy-blue text-white" id="contact">
   <div class="container">
-    <h2>We
-      <i class="fas fa-heart"></i>
-    new friends!</h2>
+    <h2>We <i class="fas fa-heart"></i> new friends!</h2>
+      <p>
+        Email: <a href="mailto:info.helpingfamiliesinsiliconvalley.org">info.helpingfamiliesinsiliconvalley.org</a>
+      </p>
+
     <ul class="list-inline list-social">
-      <li class="list-inline-item social-twitter">
-        <a href="#">
-          <i class="fab fa-twitter"></i>
+      <li class="list-inline-item social-instagram">
+        <a href="https://instagram.com/helpingfamiliesinsiliconvalley">
+          <i class="fab fa-instagram"></i>
         </a>
       </li>
-      <li class="list-inline-item social-facebook">
-        <a href="#">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-      </li>
-      <li class="list-inline-item social-google-plus">
-        <a href="#">
-          <i class="fab fa-google-plus-g"></i>
+      <li class="list-inline-item">
+        <a href="mailto:info.helpingfamiliesinsiliconvalley.org">
+          <i class="fas fa-envelope"></i>
         </a>
       </li>
     </ul>
