--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
     <div class="row">
       <!-- Team member -->
       <div class="col-xs-12 col-sm-6 col-md-6 mb-5">
-        <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+        <div class="image-flip">
           <div class="mainflip">
             <div class="frontside">
               <div class="card">
@@ -114,7 +114,7 @@
       </div>
       <!-- ./Team member -->
       <div class="col-xs-12 col-sm-6 col-md-6 mb-5">
-        <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+        <div class="image-flip">
           <div class="mainflip">
             <div class="frontside">
               <div class="card">
@@ -166,7 +166,7 @@
     <div class="row">
       <!-- Team member -->
       <div class="col-xs-12 col-sm-6 col-md-4 mb-5">
-        <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+        <div class="image-flip">
           <div class="mainflip">
             <div class="frontside">
               <div class="card">
@@ -208,7 +208,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4 mb-5">
-        <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+        <div class="image-flip">
           <div class="mainflip">
             <div class="frontside">
               <div class="card">
@@ -250,7 +250,7 @@
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4 mb-5">
-        <div class="image-flip" ontouchstart="this.classList.toggle('hover');">
+        <div class="image-flip">
           <div class="mainflip">
             <div class="frontside">
               <div class="card">
