--- a/public/index.html
+++ b/public/index.html
@@ -174,6 +174,7 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title">Lorena Torres</h4>
                   <h6 class="card-text text-small">
+                    Lorena Torres is a registered nurse currently working in a community health clinic in East Palo Alto. She studied nursing at College of San Mateo and earned her Bachelor's in Nursing from California State University East Bay. Prior to pursuing her nursing degree she worked as a medical assistant for five years. Lorena has always aspired to make a difference every day by helping others.<span class="d-none d-sm-inline"> Her current role has motivated her to get more involved in her community. She has experience working with underserved communities including minorities, homeless and low-income families. Lorena has joined Helping Families in Silicon Valley in order to contribute her knowledge of health and resources, as well as establish trusting relationships with her community.</span>
                   </h6>
                   <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
@@ -211,6 +212,7 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title">Arturo Montoya</h4>
                   <h6 class="card-text text-small">
+                    Arturo Montoya is proud to be the first in his family to graduate from college with a B.S. in Computer Engineering from SJSU. Arturo originally comes from a background of working with underserved youth in the south bay and the peninsula. From his time at SJSU emerged with a passion for driving student success through efficiency and innovation.
                   </h6>
                   <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
