--- a/public/index.html
+++ b/public/index.html
@@ -174,7 +174,7 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title">Lorena Torres</h4>
                   <h6 class="card-text text-small">
-                    Lorena Torres is a registered nurse currently working in a community health clinic in East Palo Alto. She studied nursing at College of San Mateo and earned her Bachelor's in Nursing from California State University East Bay. Prior to pursuing her nursing degree she worked as a medical assistant for five years. Lorena has always aspired to make a difference every day by helping others.<span class="d-none d-sm-inline"> Her current role has motivated her to get more involved in her community. She has experience working with underserved communities including minorities, homeless and low-income families. Lorena has joined Helping Families in Silicon Valley in order to contribute her knowledge of health and resources, as well as establish trusting relationships with her community.</span>
+                    Lorena is a registered nurse currently working in a community health clinic in E.P.A. She received her B.A in Nursing from CSUEB. She has always aspired to make a difference every day by helping others. She has experience working with underserved communities including minorities, homeless and low-income families.
                   </h6>
                   <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
@@ -251,6 +251,7 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title">Robert Bugarin</h4>
                   <h6 class="card-text text-small">
+                    He is everything anyone can ever ask for just ask his girlfriend.
                   </h6>
                   <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
