--- a/public/index.html
+++ b/public/index.html
@@ -242,7 +242,6 @@
                   <p><img class="img-fluid" src="./robert-bugarin.jpeg" alt="card image"></p>
                   <h4 class="card-title">Robert Bugarin</h4>
                   <p class="card-text">Civil Engineer</p>
-                  
                 </div>
               </div>
             </div>
@@ -251,6 +250,7 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title">Robert Bugarin</h4>
                   <h6 class="card-text text-small">
+                    Roberto Bugarin is an Engineering Assistant professional working with a City in the Peninsula for a Public Works department. In his role, his attention to detail and an inbound of problem solving and critical thinking  platform helps citizens feel safe while attracting visitors. Previously, Roberto worked as a Program Coordinator for a Non-Profit startup. He focused his studies at California State University Sacramento with an emphasis in Civil Engineering.
                   </h6>
                   <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
