--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       <div class="col my-auto">
         <div class="header-content mx-auto">
           <h1 class="mb-3"><img src="logo.svg" alt="" height="40" class="mr-2">Helping Families in Silicon Valley</h1>
-          <h2 class="mb-3">Our mission is to provide families with resources to uplift <br/> and strengthen their lives.</h2>
+          <h2 class="mb-3 d-none d-sm-block">Our mission is to provide families with resources to uplift <br/> and strengthen their lives.</h2>
           <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Start Helping Today</a>
         </div>
       </div>
@@ -290,7 +290,7 @@
   <div class="container">
     <h2>We <i class="fas fa-heart"></i> new friends!</h2>
       <p>
-        Email: <a href="mailto:info.helpingfamiliesinsiliconvalley.org">info.helpingfamiliesinsiliconvalley.org</a>
+        Email: <a href="mailto:info@helpingfamiliesinsiliconvalley.org">info@helpingfamiliesinsiliconvalley.org</a>
       </p>
 
     <ul class="list-inline list-social">
@@ -300,7 +300,7 @@
         </a>
       </li>
       <li class="list-inline-item">
-        <a href="mailto:info.helpingfamiliesinsiliconvalley.org">
+        <a href="mailto:info@helpingfamiliesinsiliconvalley.org">
           <i class="fas fa-envelope"></i>
         </a>
       </li>
