new mission statement and vision

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,8 @@
       <div class="col my-auto">
         <div class="header-content mx-auto">
           <h1 class="mb-3"><img src="logo.svg" alt="" height="40" class="mr-2">Helping Families in Silicon Valley</h1>
-          <h2 class="mb-3 d-none d-sm-block">Our mission is to provide families with resources to uplift <br/> and strengthen their lives.</h2>
+          <h2 class="mb-3 d-none d-sm-block">We are a  multi service organization that offers 
+          inspirational workshops, mentoring and resources to help families. </h2>
           <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Start Helping Today</a>
         </div>
       </div>
@@ -56,7 +57,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 mx-auto">
-        <h2 class="section-heading">Our vision is to uplift and strengthen families to empower communities.</h2>
+        <h2 class="section-heading">Our vision is to uplift and strengthen families to help them reach their full potential.</h2>
         <p>Contact Us to get started!</p>
       </div>
     </div>
