bg colors and images

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
   </div>
 </header>
 
-<section class="download bg-primary text-white text-center" id="download">
+<section class="download bg-navy-blue-3 text-white text-center" id="download">
   <div class="container">
     <div class="row">
       <div class="col-md-8 mx-auto">
@@ -105,7 +105,7 @@
                   </h6>
                   <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
-                      <a href="mailto:julie.larios@helpingfamiliesinsiliconvalley.org">
+                      <a href="mailto:julie.larios@helpingfamiliesinsv.org">
                         <i class="fas fa-envelope text-white"></i>
                       </a>
                     </li>
@@ -144,7 +144,7 @@
                   </h6>
                   <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
-                      <a href="mailto:melissavazquez@helpingfamiliesinsiliconvalley.org">
+                      <a href="mailto:melissa@helpingfamiliesinsv.org">
                         <i class="fas fa-envelope text-white"></i>
                       </a>
                     </li>
@@ -166,7 +166,7 @@
 </section>
 
 <!-- -->
-<section class="cta">
+<section class="cta bg-img-classroom">
   <div class="cta-content">
     <div class="container">
       <h2>Stop waiting.<br>Start Getting Involved.</h2>
@@ -176,21 +176,20 @@
   <div class="overlay"></div>
 </section>
 
-<section class="contact bg-primary text-white" id="contact">
+<section class="contact bg-navy-blue-3 text-white" id="contact">
   <div class="container">
-    <h2>We <i class="fas fa-heart"></i> new friends!</h2>
     <p>
-      Email: <a href="mailto:info@helpingfamiliesinsiliconvalley.org">info@helpingfamiliesinsiliconvalley.org</a>
+      Email: <a href="mailto:info@helpingfamiliesinsv.org">info@helpingfamiliesinsv.org</a>
     </p>
 
     <ul class="list-inline list-social">
       <li class="list-inline-item social-instagram">
-        <a href="https://instagram.com/helpingfamiliesinsiliconvalley">
+        <a href="https://instagram.com/helpingfamiliesinsv">
           <i class="fab fa-instagram"></i>
         </a>
       </li>
       <li class="list-inline-item">
-        <a href="mailto:info@helpingfamiliesinsiliconvalley.org">
+        <a href="mailto:info@helpingfamiliesinsv.org">
           <i class="fas fa-envelope"></i>
         </a>
       </li>
