--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 
   <title>Helping Families</title>
   <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Share+Tech&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
