--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,6 @@
     gtag('config', 'UA-156334480-1');
   </script>
 
-  <script src="https://www.paypal.com/sdk/js?client-id=AXdc9AQ6kTKOvhHy-AXAlf86g4yayIcjpSz33Dv40RRlOtkfo-5iA4efwrHq4nUJy3eaAgdSGvSFlW4l">
-  </script>
   <link rel="shortcut icon" href="%PUBLIC_URL%/logo.svg" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
@@ -177,22 +175,17 @@
   <div class="overlay"></div>
 </section>
   <section id="paypal-section" class="pb-5 bg-light page-section" >
-    <div class="container">
+    <div class="d-flex justify-content-center">
       <h5 class="section-title h1">Donate</h5>
-      <div id="paypal-button-container"></div>
-      <div id="paypal-success-container" style="display: none;">
-        <h4 class="h4">Thank you</h4>
-      </div>
-      <script>
-        paypal.Buttons({
-          onApprove: function(data, actions) {
-            return actions.order.capture().then(function(details) {
-              console.log(details)
-              $('#paypal-button-container').hide();
-              $('#paypal-success-container').show();
-            });
-          }}).render('#paypal-button-container');
-      </script>
+    </div>
+    <div class="d-flex justify-content-center">
+      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_donations" />
+        <input type="hidden" name="business" value="TestIDVALUE" />
+        <input type="hidden" name="currency_code" value="USD" />
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+        <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+      </form>
     </div>
   </section>
 
