--- a/public/index.html
+++ b/public/index.html
@@ -206,26 +206,17 @@
       </div>
     </div>
   </section>
-  <section id="paypal-section" class="pb-5 bg-light page-section" >
-    <div class="d-flex justify-content-center">
-      <h5 class="section-title h1">Donate</h5>
-    </div>
-    <div class="d-flex justify-content-center">
-      <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-        <input type="hidden" name="cmd" value="_s-xclick" />
-        <input type="hidden" name="hosted_button_id" value="VFZQL9TJ28Y52" />
-        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
-        <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
-      </form>
-    </div>
-  </section>
 
 <section class="contact bg-navy-blue-3 text-white" id="contact">
   <div class="container">
     <p>
+      <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=VFZQL9TJ28Y52&source=url">
+        Donate: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <i class="fab fa-3x fa-paypal"></i>
+      </a>
+    </p>
+    <p>
       Email: <a href="mailto:info@helpingfamiliesinsv.org">info@helpingfamiliesinsv.org</a>
     </p>
-
     <ul class="list-inline list-social">
       <li class="list-inline-item social-instagram">
         <a href="https://instagram.com/helpingfamiliesinsv">
