move blog section up

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,28 @@
     </div>
   </div>
 </header>
+  <section id="blog" class="pb-5 bg-light page-section" >
+    <div class="container">
+      <h5 class="section-title h1">Blog</h5>
+      <div class="row mb-2 justify-content-md-center">
+        <div class="col-md-6">
+          <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+            <div class="col p-4 d-flex flex-column position-static">
+              <strong class="d-inline-block mb-2 text-primary">Workshop</strong>
+              <h3 class="mb-0">SMART goals</h3>
+              <div class="mb-1 text-muted">March 11</div>
+              <p class="card-text mb-auto">Overview of a simple but effective model for identifying and planning for business, personal, and professional goal setting.</p>
+              <a href="https://www.eventbrite.com/e/smart-goals-setting-with-adrienne-lawson-tickets-95119604297?ref=eios" class="stretched-link text-primary">Continue reading</a>
+            </div>
+            <div class="col-auto d-none d-lg-block">
+              <img class="bd-placeholder-img mt-3" width="225" height="200" src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F92912059%2F408932228207%2F1%2Foriginal.20200218-001752?w=1080&auto=format%2Ccompress&q=75&sharp=10&rect=0%2C0%2C890%2C445&s=bea7c2ef362449fb8ef6305721af5e80"/>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
+  </section>
 <section class="download bg-navy-blue-3 text-white text-center" id="download">
   <div class="container">
     <div class="row">
@@ -174,27 +195,6 @@
   </div>
   <div class="overlay"></div>
 </section>
-  <section id="blog" class="pb-5 bg-light page-section" >
-    <div class="container">
-      <div class="row mb-2 justify-content-md-center">
-        <div class="col-md-6">
-          <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-            <div class="col p-4 d-flex flex-column position-static">
-              <strong class="d-inline-block mb-2 text-primary">Workshop</strong>
-              <h3 class="mb-0">SMART goals</h3>
-              <div class="mb-1 text-muted">March 11</div>
-              <p class="card-text mb-auto">Overview of a simple but effective model for identifying and planning for business, personal, and professional goal setting.</p>
-              <a href="https://www.eventbrite.com/e/smart-goals-setting-with-adrienne-lawson-tickets-95119604297?ref=eios" class="stretched-link text-primary">Continue reading</a>
-            </div>
-            <div class="col-auto d-none d-lg-block">
-              <img class="bd-placeholder-img mt-3" width="225" height="200" src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F92912059%2F408932228207%2F1%2Foriginal.20200218-001752?w=1080&auto=format%2Ccompress&q=75&sharp=10&rect=0%2C0%2C890%2C445&s=bea7c2ef362449fb8ef6305721af5e80"/>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </section>
 <section class="contact bg-navy-blue-3 text-white" id="contact">
   <div class="container">
     <p>
