--- a/public/index.html
+++ b/public/index.html
@@ -66,13 +66,13 @@
 </header>
   <section id="blog" class="pb-5 bg-light page-section" >
     <div class="container">
-      <h5 class="section-title h1">Blog</h5>
+      <h5 class="section-title h1">Workshops</h5>
       <div class="row mb-2 justify-content-md-center">
         <div class="col-md-6">
           <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-primary">Workshop</strong>
-              <h3 class="mb-0">SMART goals</h3>
+              <h3 class="mb-0">SMART GOALS</h3>
               <div class="mb-1 text-muted">March 11</div>
               <p class="card-text mb-auto">Overview of a simple but effective model for identifying and planning for business, personal, and professional goal setting.</p>
               <a href="https://www.eventbrite.com/e/smart-goals-setting-with-adrienne-lawson-tickets-95119604297?ref=eios" class="stretched-link text-primary">Continue reading</a>
