--- a/public/index.html
+++ b/public/index.html
@@ -74,11 +74,11 @@
               <strong class="d-inline-block mb-2 text-primary">Workshop</strong>
               <h3 class="mb-0">SMART GOALS</h3>
               <div class="mb-1 text-muted">March 11</div>
-              <p class="card-text mb-auto">Overview of a simple but effective model for identifying and planning for business, personal, and professional goal setting.</p>
+              <p class="card-text mb-auto">This workshop provides an overview of a simple but effective model for identifying, planning for business, personal, professional goal setting, and action planning.</p>
               <a href="https://www.eventbrite.com/e/smart-goals-setting-with-adrienne-lawson-tickets-95119604297?ref=eios" class="stretched-link text-primary">Continue reading</a>
             </div>
             <div class="col-auto d-none d-lg-block">
-              <img class="bd-placeholder-img mt-3" width="225" height="200" src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F92912059%2F408932228207%2F1%2Foriginal.20200218-001752?w=1080&auto=format%2Ccompress&q=75&sharp=10&rect=0%2C0%2C890%2C445&s=bea7c2ef362449fb8ef6305721af5e80"/>
+              <img class="bd-placeholder-img mt-4" width="225" height="200" src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F92912059%2F408932228207%2F1%2Foriginal.20200218-001752?w=1080&auto=format%2Ccompress&q=75&sharp=10&rect=0%2C0%2C890%2C445&s=bea7c2ef362449fb8ef6305721af5e80"/>
             </div>
           </div>
         </div>
