aded group photo

--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,7 @@
 </section>
 
 <!-- -->
-<section class="cta bg-img-classroom">
+<section class="cta bg-img-smart-goals-group">
   <div class="cta-content">
     <div class="container">
       <h2>Stop waiting.<br>Start Getting Involved.</h2>
