update header bg img

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
   </div>
 </nav>
 
-<header class="masthead">
+<header class="masthead bg-img-smart-goals-group">
   <div class="container h-100">
     <div class="row h-100">
       <div class="col my-auto">
@@ -204,10 +204,10 @@
 </section>
 
 <!-- -->
-<section class="cta bg-img-smart-goals-group">
+<section class="cta bg-img-classroom">
   <div class="cta-content">
     <div class="container">
-      <h2><br><br><br>Stop waiting.<br>Start Getting Involved.</h2>
+      <h2>Stop waiting.<br>Start Getting Involved.</h2>
       <a href="#contact" class="btn btn-outline btn-xl js-scroll-trigger">Let's Get Started!</a>
     </div>
   </div>
