updated julie bio

--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
                 <div class="card-body text-center mt-4">
                   <h4 class="card-title">Julie Larios</h4>
                   <h6 class="card-text text-small">
-                    Julie founded Helping Families in Silicon Valley in 2019. What inspired her to start the Helping Families organization was her passion for helping the community strive. In fact, prior to her profession Julie studied at San Jose State University  where she earned her undergraduate degree in Justice Studies.<span class="d-none d-sm-inline">Moreover, during her free time she would often volunteer in the Redwood City police department. Her main focus as a volunteer was in the community outreach and juvenile units sector.</span> Julie’s vision as a non-profit leader is to uplift and strengthen families in the community.
+                    Julie founded Helping Families in Silicon Valley in 2019. What inspired her to start the Helping Families organization was her passion for helping the community strive. In fact, prior to her profession Julie studied at San Jose State University  where she earned her undergraduate degree in Justice Studies. Julie’s vision as a non-profit leader is to uplift and strengthen families in the community.
                   </h6>
                   <ul class="list-inline social-buttons">
                     <li class="list-inline-item">
