update oldIndex.html, import jquery to index.js  and  clean up

--- a/public/oldIndex.html
+++ b/public/oldIndex.html
@@ -6,12 +6,12 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156334480-1"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-        gtag('config', 'UA-156334480-1');
-    </script>
+    gtag('config', 'UA-156334480-1');
+  </script>
 
     <link rel="shortcut icon" href="%PUBLIC_URL%/logo.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -80,7 +80,7 @@
                         <a href="https://www.eventbrite.com/e/helpful-tips-during-social-distancing-tickets-100336011712" class="stretched-link text-primary">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img mt-4" style="max-width: 200px;max-height: 200px;" src=""/>
+                        <img class="bd-placeholder-img mt-4 mr-3" style="max-width: 150px;max-height: 200px;" src="https://img.evbuc.com/https%3A%2F%2Fcdn.evbuc.com%2Fimages%2F96951240%2F408932228207%2F1%2Foriginal.20200319-034420?w=1080&auto=format%2Ccompress&q=75&sharp=10&rect=0%2C0%2C3300%2C1650&s=8bdb790f4499d97a5c49dd3668119e88"/>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                         <strong class="d-inline-block mb-2 text-primary">Workshop</strong>
                         <h3 class="mb-0">SMART GOALS</h3>
                         <div class="mb-1 text-muted">March 11</div>
-                        <p class="card-text mb-auto">This workshop provides an overview of a simple but effective model ...</p>
+                        <p class="card-text mb-auto">This workshop provides an overview of a simple but effective model for identifying, planning for business, personal, ...</p>
                         <a href="https://www.eventbrite.com/e/smart-goals-setting-with-adrienne-lawson-tickets-95119604297?ref=eios" class="stretched-link text-primary">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
@@ -224,8 +224,13 @@
             Email: <a href="mailto:info@helpingfamiliesinsv.org">info@helpingfamiliesinsv.org</a>
         </p>
         <ul class="list-inline list-social">
+            <li class="list-inline-item ">
+                <a href="https://www.facebook.com/Helping-Families-in-Silicon-Valley-102948694690106?helping=families">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+            </li>
             <li class="list-inline-item social-instagram">
-                <a href="https://instagram.com/helpingfamiliesinsv">
+                <a href="https://instagram.com/helpingfamiliesinsiliconvalley?helping=families">
                     <i class="fab fa-instagram"></i>
                 </a>
             </li>
